syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./";

service User {
  rpc GetUserList(PageInfo) returns (UserListResponse); // 用户列表
  rpc GetUserByMobile(MobilerRequest) returns(UserInfoResponse); // 通过mobile查找用户
  rpc GetUserById(IdRequest) returns(UserInfoResponse); // 通过id查找用户
  rpc CreateUser(CreateUserInfo) returns(UserInfoResponse); // 添加用户
  rpc UpdateUser(UpdateUserInfo) returns(google.protobuf.Empty); // 更新用户
  rpc CheckPassWord(PasswordCheckInfo) returns(CheckResponse); // 检查密码
}

message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool success = 1;
}

message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message MobilerRequest {
  string mobile = 1;
}

message IdRequest {
  int32 id = 1;
}

message CreateUserInfo {
  string nickName = 1;
  string mobile = 2;
  string password = 3;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 birthday = 4;
}

message UserInfoResponse {
  int32 id = 1;
  string mobile = 2;
  string nickName = 3;
  uint64 birthday = 4;
  string gender = 5;
  int32 role = 6;
  string password = 7;

}

message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}